# mlops-best-practice-blogs

./: .gitignore  README.md
the-art-of-testing-ml-pipelines/: .gitignore  README.md  pipeline_config.yaml  pyproject.toml  run.py
the-art-of-testing-ml-pipelines/pipelines/: __init__.py  training_pipeline.py
the-art-of-testing-ml-pipelines/steps/: __init__.py  data_loader.py  evaluator.py  trainer.py
the-art-of-testing-ml-pipelines/tests/: conftest.py
the-art-of-testing-ml-pipelines/tests/test_pipelines/: test_pipeline.py  test_pipeline_config.yaml
the-art-of-testing-ml-pipelines/tests/test_steps/: test_step_data_loader.py  test_step_evaluator.py  test_step_trainer.py
